feat: wip v3
