# src/main/java/org/tkit/onecx/ai/provider/domain/models/enums/AgentGroupOrchestrationMode.java
@@ -1,0 +1,7 @@
+package org.tkit.onecx.ai.provider.domain.models.enums;
+
+public enum AgentGroupOrchestrationMode {
+    SUPERVISOR_ROUTED,
+    SEQUENTIAL,
+    PARALLEL
+}
